test/DaedalusCompiler.Tests/SemanticErrors/SymbolTableCreationVisitorTests.cs
namespace DaedalusCompiler.Tests.SemanticErrors
{
    public class SymbolTableCreationTests : BaseSemanticErrorsTests
    {
        
    }
}